<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ViewBindingFragment">

    <include android:id="@+id/headerContainer" layout="@layout/header" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_placeholder" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presiona" />

    <CheckBox
        android:id="@+id/cbActivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_title" />

    <RadioButton
        android:id="@+id/rbRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/este_es_un_radio" />

    <ImageView
        android:id="@+id/ivPlaneta"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/planeta" />

    <include android:id="@+id/footer" layout="@layout/footer" />

</LinearLayout>